[gd_scene load_steps=2 format=3 uid="uid://dmdap5up7v7wu"]

[ext_resource type="Script" path="res://scenes/managers/spear/spear_controller.gd" id="1_msqmi"]

[node name="SpearController" type="Node"]
script = ExtResource("1_msqmi")

[node name="TimerCd" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TimerCd" to="." method="_on_timer_cd_timeout"]
